# psrchive

./: Makefile.am  configure.ac  greps  update
Base/: Makefile.am
Base/Applications/: Makefile.am  psrconv.C  psredit.C  vap.C  vip.C
Base/Checks/: DeFaradayed.C  Dedispersed.C
Base/Classes/: Application.C  Archive.C  ArchiveEditor.C  ArchiveInterface.C  Archive_init_Integration.C  Archive_unload.C  Archive_verbose.C  Calibrator.C  Integration.C  IntegrationEditor.C  IntegrationInterface.C  IntegrationManager.C  IntegrationMeta.C  Integration_resize.C  Makefile.am  ManagedStrategies.C  Profile.C  Profile_rotate.C
Base/Extensions/: AuxColdPlasmaMeasures.C  CalibratorExtension.C  CalibratorStokes.C  CoherentDedispersionTI.C  ColdPlasmaHistory.C  ConfigurableProjectionExtension.C  ConfigurableProjectionExtensionInterface.C  Dedisperse.C  DynamicResponse.C  Extension_factory.C  GBT.C  Makefile.am  Passband.C  Pointing.C  PointingTI.C  PolnCalibratorExtension.C  PolnCalibratorExtensionTI.C  ProcHistoryTI.C  Receiver.C  Receiver_Field.C  Receiver_load.C  SpectralKurtosis.C  Telescopes.C  mount_factory.C
Base/Resources/: Tempo_config.C
Documentation/: psrchive.dox
Management/: Config_ensure_linkage.C  Makefile.am  psrchive.pc.in
More/: Makefile.am
More/Applications/: Makefile.am  PavApp.C  PavApp.h  diffdelay.C  example.C  fluxcal.C  mtm.C  pac.C  pafit.C  pam.C  pas.C  pat.C  paz.C  pcm.C  pcmavg.C  pcmdiff.C  pcmrm.C  pcmtxt.C  pdv.C  print_Predictor.C  psr4th.C  psradd.C  psrdiff.C  psrdnu.C  psrmodel.C  psrpca.C  psrplot.C  psrsh.C  psrsplit.C  psrwt.C  psrzap.C  rmfit.C  smint.C
More/General/: AdaptiveSNR.C  ArchiveComparisons.C  ArchiveStatistic.C  ArchiveTemplates.C  Archive_dedisperse.C  Archive_defaraday.C  Archive_fscrunch.C  Archive_tscrunched.C  Archive_update_history.C  Archive_update_model.C  BaselineEstimator.C  CompareWith.C  CompareWithEachOther.C  Correlate.C  CrossValidatedSmooth2D.C  DeleteInterpreter.C  Dispersion.C  DispersionDelay.C  DynamicSpectrum.C  ExponentialBaseline.C  ExtensionInterpreter.C  FaradayRotation.C  FrequencyIntegrate.C  HasArchive.C  HasBaselineEstimator.C  Index.C  Integration_dedisperse.C  Integration_new_PolnProfile.C  Integration_orphan.C  Integration_update_history.C  Interpreter.C  IterativeBaseline.C  Makefile.am  NoiseStatistics.C  PeakConsecutive.C  PeakCumulative.C  PhaseWeight.C  PhaseWeightInterface.C  PhaseWeightStatistic.C  PhaseWidth.C  (+21 more)
More/MEAL/: Boost1.C  BoostUnion.C  ChainRule.C  ComplexRVM.C  CongruenceTransformation.C  CyclicParameter.C  Function.C  FunctionInterface.C  Function_factory.C  Function_parse.C  LeastSquares.C  Makefile.am  MultivariatePolicy.C  NormalizeStokes.C  NvariateScalarFactory.C  OneParameter.C  Polar.C  Polynomial.C  Polynomial2D.C  Projection.C  Rotation.C  Rotation1.C  test_Function_load.C  test_GaussJordan.C  test_NvariateScalarFactory.C  test_Scalar.C  test_Vectorize.C  test_lm_covar.C
More/Plotting/: CalibratorInfo.C  CalibratorParameter.C  CalibratorPlotter.C  DynamicBaselineSpectrumPlot.C  DynamicStatSpectrumPlot.C  DynamicStatSpectrumPlotTI.C  FluxPlot.C  FrequencyScale.C  PhaseVsHist.C  PhaseVsPlot.C  PhaseVsPlotTI.C  Plot.C  PlotFactory.C  PlotLabel.C  PlotLoop.C  PlotScale.C  ProfilePlot.C  ProfilePlotTI.C  SpectrumPlot.C  StokesCovariancePlot.C  StokesCrossCovariancePlot.C  StokesFluctPlot.C  StokesFluctPlotTI.C  SystemCalibratorPlotter.C
More/Polarimetry/: BackendEstimate.C  BackendFeedInfo.C  BasisCorrection.C  Britton2000.C  BrittonInfo.C  CalInterpreter.C  CalibratorStokesInfo.C  CelestialProjection.C  CoherencyMeasurement.C  CoherencyMeasurementSet.C  ComplexRVMFit.C  ConfigurableProjection.C  ConfigurableProjectionCorrection.C  ConfigurableProjectionExt.C  ConfigurableProjectionInfo.C  ConstantGainInfo.C  CorrelationInfo.C  CovarianceReport.C  DataAndModelReport.C  DataSetManager.C  Database.C  DeltaRM.C  DoPCalibrator.C  Faraday.C  FaradayRotation.C  Feed_load.C  FitGoodnessReport.C  FluxCalManager.C  FluxCalManagerInfo.C  FluxCalibrator.C  FluxCalibratorInfo.C  FrontendCorrection.C  IXRInfo.C  InputDataReport.C  Instrument.C  InstrumentInfo.C  Integration_transform.C  KnownVariableTransformation.C  Makefile.am  ManualPolnCalibrator.C  (+56 more)
More/RFIMitigation/: InterQuartileRange.C  SumThreshold.C  TimeFrequencyZap.C  ZapExtend.C  ZapInterpreter.C
More/Resources/: Makefile.am  standard_interface.C  standard_shell.C  test_ConfigurableProjection.C
More/Simulation/: Makefile.am  psrsim.C
More/Tests/: Makefile.am
More/python/: Makefile.am  psrchive.i
More/python/examples/: derotate.py  iono_aux_rm.py
Util/: Makefile.am
Util/stat/: BinaryStatistic.C  ChiSquared.C  ChiSquared.h  GeneralizedChiSquared.C  LinearRegression.C  LinearRegression.h  LinearRegression.tex  Makefile.am  UnaryStatistic.C  UnaryStatistic.h  evaluate.C  evaluate.h  statutil.C  statutil.h  test_LinearRegression.C
config/: Makefile.am  Makefile.include  ac_python_devel.m4  armadillo.m4  cfitsio.m4  fftw.m4  giza.m4  yaml-cpp.m4
(+362 files in other folders)
